--- a/src/presentacion/RegistrarMovimiento.form
+++ b/src/presentacion/RegistrarMovimiento.form
@@ -445,11 +445,11 @@
                           <EmptySpace min="-2" pref="62" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="txtTipoCodigo" alignment="0" min="-2" pref="165" max="-2" attributes="0"/>
-                              <Component id="txtDescripcion" alignment="0" min="-2" pref="288" max="-2" attributes="0"/>
                               <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
                                   <Component id="txtEstado" alignment="0" pref="181" max="32767" attributes="0"/>
                                   <Component id="txtAccion" alignment="0" max="32767" attributes="0"/>
                               </Group>
+                              <Component id="cbxDescripcion" alignment="0" min="-2" pref="102" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
@@ -459,7 +459,7 @@
                           <Component id="btnRegistrar2" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="120" max="32767" attributes="0"/>
+                  <EmptySpace pref="200" max="32767" attributes="0"/>
               </Group>
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -484,8 +484,8 @@
                           <Component id="lblAccion" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
-                          <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
-                          <Component id="txtDescripcion" min="-2" pref="39" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
+                          <Component id="cbxDescripcion" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -508,7 +508,7 @@
                       <Component id="btnNuevo2" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="btnRegistrar2" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="28" max="32767" attributes="0"/>
+                  <EmptySpace pref="37" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -538,11 +538,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtTipoCodigo">
-        </Component>
-        <Component class="javax.swing.JTextField" name="txtDescripcion">
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtDescripcionActionPerformed"/>
-          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="txtAccion">
           <Events>
@@ -585,6 +580,21 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtEstado">
+        </Component>
+        <Component class="javax.swing.JComboBox" name="cbxDescripcion">
+          <Properties>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="4">
+                <StringItem index="0" value="Item 1"/>
+                <StringItem index="1" value="Item 2"/>
+                <StringItem index="2" value="Item 3"/>
+                <StringItem index="3" value="Item 4"/>
+              </StringArray>
+            </Property>
+          </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
